--- a/src/css/section.css
+++ b/src/css/section.css
@@ -1,6 +1,7 @@
 section {
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     text-align: center;
     justify-content: center;
     align-items: center;
