--- a/src/css/section.css
+++ b/src/css/section.css
@@ -1,5 +1,5 @@
 section {
-    min-height: 100vh;
+    /*min-height: 100vh;*/
     display: flex;
     flex-direction: column;
     text-align: center;
