bunx prettier . --write

--- a/src/css/div.css
+++ b/src/css/div.css
@@ -1,13 +1,12 @@
 /*div*/
 
 .about_card {
-    width: 500px;
-    max-width: 90%;
-    padding: 1px;
-    margin: 5px;
+  width: 500px;
+  max-width: 90%;
+  padding: 1px;
+  margin: 5px;
 }
 .white_card {
-    background-color: var(--lit_color_one);
-    color: var(--drk_color_one)
-    
+  background-color: var(--lit_color_one);
+  color: var(--drk_color_one);
 }
