--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,10 +1,8 @@
 /* main.css  */
 /* import other css here */
 
-
-
 /* GOOGLE FONTS */
-@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lilita+One&display=swap");
 
 /* css  */
 @import url(./style.css);
